# StegonInC

./: CMakeLists.txt  LICENSE  README.md  StegoInC.cbp  StegoInC.depend  StegoInC.layout  index.html  main.c  main.h  params.json
dir/: StegoInC.exe.stackdump
dir/imgIn/: Thumbs.db
dir/imgOut/: Thumbs.db
dir/txtIn/: new.txt  test.txt  test2.txt  test3.txt
dir/txtOut/: newOut.txt  test.txt  test333.txt
src/: bitsop.c  bitsop.h  decode.c  decode.h  encode.c  encode.h  fileop.c  fileop.h  imagedata.c  imagedata.h  lodepng.c  lodepng.h
